--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,8 @@ html,
 body {
   font-family: "Nunito", sans-serif;
   font-size: 20px;
-  background-color: #f4f2f8;
+  /* background-color: #f4f2f8; */
+  background-color: "#cccccc";
   line-height: 1;
 }
 
