--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .elementBorder {
+    @apply border-2 border-gray-100 transition-all duration-300 hover:border-purple rounded-[15px];
+  }
+}
+
 html,
 body {
   font-family: "Nunito", sans-serif;
