--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -8,7 +8,12 @@
   .elementBorder {
     @apply border-2 border-gray-100 transition-all duration-300 hover:border-purple rounded-[15px];
   }
+  .image {
+    @apply w-8 h-8 rounded-full shadow-customDark object-cover;
+  }
 }
+
+
 
 html,
 body {
