--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -22,6 +22,7 @@ body {
   font-family: 'Nunito', sans-serif;
   font-size: 20px;
   background-color: #f4f2f8;
+  //background-color: white;
   /* background-color: "#cccccc"; */
   line-height: 1;
 }
