--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -20,10 +20,8 @@
 html,
 body {
   font-family: 'Nunito', sans-serif;
-  font-size: 20px;
+  font-size: 1.1rem;
   background-color: #f4f2f8;
-  //background-color: white;
-  /* background-color: "#cccccc"; */
   line-height: 1;
 }
 
