--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -25,11 +25,13 @@ body {
   line-height: 1;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -38,12 +40,6 @@ a {
 
 ul {
   list-style: none;
-}
-
-*,
-*:after,
-*:after {
-  box-sizing: border-box;
 }
 
 /* @layer utilities {
